style: Edited styles.css to fix spacing of elements
Updated the project class to have flex-content: space-evenly so projects are positioned more naturally

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ blockquote {
 
 .projects {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 0;
 }
@@ -153,7 +153,7 @@ blockquote {
     width: 370px; /* Set a fixed width */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     /*border: 1px solid #ccc;*/
     padding: 10px;
     box-sizing: border-box;
